added sorting for statuses

--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "app": "^0.1.0",
     "axios": "^1.2.1",
     "core-js": "^3.31.1",
+    "npm": "^10.7.0",
     "pinia": "^2.1.7",
     "quasar": "^2.8.0",
     "sockjs-client": "^1.6.1",
     "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
