fix deadlines, watchingNow

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "app": "^0.1.0",
     "axios": "^1.2.1",
     "core-js": "^3.31.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "npm": "^10.7.0",
     "pinia": "^2.1.7",
     "quasar": "^2.8.0",
